--- a/archives/toutiao-search/2024-04-18.md
+++ b/archives/toutiao-search/2024-04-18.md
@@ -1,55 +1,74 @@
 # 2024-04-18
 
-共 240 条
+共 257 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 18 2024 15:01:02 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Apr 18 2024 16:00:53 GMT+0800 (China Standard Time) -->
+1. [外交部：欢迎美国国务卿布林肯访华](https://so.toutiao.com/search?keyword=外交部：欢迎美国国务卿布林肯访华)
+1. [网友：五一不是放假而是假放](https://so.toutiao.com/search?keyword=网友：五一不是放假而是假放)
+1. [三个维度读懂“中国第一展”的热度](https://so.toutiao.com/search?keyword=三个维度读懂“中国第一展”的热度)
+1. [美媒称以色列考虑有限打击伊朗领士](https://so.toutiao.com/search?keyword=美媒称以色列考虑有限打击伊朗领士)
 1. [实拍广州暴雨瞬间白昼变夜晚](https://so.toutiao.com/search?keyword=实拍广州暴雨瞬间白昼变夜晚)
 1. [中国人亲历迪拜暴雨：酒店厨房被淹](https://so.toutiao.com/search?keyword=中国人亲历迪拜暴雨：酒店厨房被淹)
-1. [三个维度读懂“中国第一展”的热度](https://so.toutiao.com/search?keyword=三个维度读懂“中国第一展”的热度)
-1. [美称将加强中东地区导弹防御和预警](https://so.toutiao.com/search?keyword=美称将加强中东地区导弹防御和预警)
-1. [社保专家谈调整养老金领取年龄](https://so.toutiao.com/search?keyword=社保专家谈调整养老金领取年龄)
-1. [二本女孩跨专业考研上岸双一流](https://so.toutiao.com/search?keyword=二本女孩跨专业考研上岸双一流)
-1. [特斯拉被裁员工：满意赔偿标准](https://so.toutiao.com/search?keyword=特斯拉被裁员工：满意赔偿标准)
-1. [伊朗总统在阅兵式上喊话以色列](https://so.toutiao.com/search?keyword=伊朗总统在阅兵式上喊话以色列)
-1. [网友：五一不是放假而是假放](https://so.toutiao.com/search?keyword=网友：五一不是放假而是假放)
-1. [官方通报女子因带娃被公公扇耳光](https://so.toutiao.com/search?keyword=官方通报女子因带娃被公公扇耳光)
-1. [老人在成都居家4个月燃气费1.5万](https://so.toutiao.com/search?keyword=老人在成都居家4个月燃气费1.5万)
-1. [南宁楼房倒塌人像饺子往下掉？假的](https://so.toutiao.com/search?keyword=南宁楼房倒塌人像饺子往下掉？假的)
-1. [反对调休的声音不能装作听不到](https://so.toutiao.com/search?keyword=反对调休的声音不能装作听不到)
-1. [“开封王婆”江西说媒首日促成多对](https://so.toutiao.com/search?keyword=“开封王婆”江西说媒首日促成多对)
+1. [记者提问全红婵来过几次西安](https://so.toutiao.com/search?keyword=记者提问全红婵来过几次西安)
 1. [9岁男孩疑似因长期体罚跳楼身亡](https://so.toutiao.com/search?keyword=9岁男孩疑似因长期体罚跳楼身亡)
 1. [浙江已有2个老旧小区推倒重建](https://so.toutiao.com/search?keyword=浙江已有2个老旧小区推倒重建)
-1. [新款问界M5预售12小时订单破万](https://so.toutiao.com/search?keyword=新款问界M5预售12小时订单破万)
-1. [钟南山发文悼念沈华浩](https://so.toutiao.com/search?keyword=钟南山发文悼念沈华浩)
-1. [核酸大王张核子回应张珊珊身份](https://so.toutiao.com/search?keyword=核酸大王张核子回应张珊珊身份)
+1. [官方通报女子因带娃被公公扇耳光](https://so.toutiao.com/search?keyword=官方通报女子因带娃被公公扇耳光)
+1. [81岁大爷以25元的价格嫖娼被行拘](https://so.toutiao.com/search?keyword=81岁大爷以25元的价格嫖娼被行拘)
+1. [南宁楼房倒塌人像饺子往下掉？假的](https://so.toutiao.com/search?keyword=南宁楼房倒塌人像饺子往下掉？假的)
+1. [反对调休的声音不能装作听不到](https://so.toutiao.com/search?keyword=反对调休的声音不能装作听不到)
+1. [专家：伊朗报复行动总体克制](https://so.toutiao.com/search?keyword=专家：伊朗报复行动总体克制)
+1. [驻日领馆提醒中国公民注意防范余震](https://so.toutiao.com/search?keyword=驻日领馆提醒中国公民注意防范余震)
+1. [姑父强奸猥亵侄女7年被判十三年](https://so.toutiao.com/search?keyword=姑父强奸猥亵侄女7年被判十三年)
+1. [暴雨袭击阿联酋 迪拜天空一秒变绿](https://so.toutiao.com/search?keyword=暴雨袭击阿联酋+迪拜天空一秒变绿)
 1. [男子被查酒驾自称是纪委的人遭怼](https://so.toutiao.com/search?keyword=男子被查酒驾自称是纪委的人遭怼)
+1. [光刻机巨头阿斯麦业绩爆雷](https://so.toutiao.com/search?keyword=光刻机巨头阿斯麦业绩爆雷)
+1. [特斯拉被裁员工：满意赔偿标准](https://so.toutiao.com/search?keyword=特斯拉被裁员工：满意赔偿标准)
 1. [周海媚墓地公布 安葬在北京](https://so.toutiao.com/search?keyword=周海媚墓地公布+安葬在北京)
-1. [中菲曾达成“秘密协定”？中方回应](https://so.toutiao.com/search?keyword=中菲曾达成“秘密协定”？中方回应)
-1. [中方支持巴勒斯坦正式加入联合国](https://so.toutiao.com/search?keyword=中方支持巴勒斯坦正式加入联合国)
-1. [公牛擒老鹰 将同热火争季后赛资格](https://so.toutiao.com/search?keyword=公牛擒老鹰+将同热火争季后赛资格)
-1. [伊朗无人机开灯袭击以色列是真的吗](https://so.toutiao.com/search?keyword=伊朗无人机开灯袭击以色列是真的吗)
-1. [中国2月持有美国国债减少227亿美元](https://so.toutiao.com/search?keyword=中国2月持有美国国债减少227亿美元)
+1. [流浪猫被捡回家 一来客人就趴肩膀](https://so.toutiao.com/search?keyword=流浪猫被捡回家+一来客人就趴肩膀)
+1. [马斯克回应部分被裁员工遣散费过低](https://so.toutiao.com/search?keyword=马斯克回应部分被裁员工遣散费过低)
+1. [周鸿祎要卖迈巴赫买国产新能源车](https://so.toutiao.com/search?keyword=周鸿祎要卖迈巴赫买国产新能源车)
+1. [核酸大王张核子回应张珊珊身份](https://so.toutiao.com/search?keyword=核酸大王张核子回应张珊珊身份)
+1. [男生被噎住 同桌用海姆立克法施救](https://so.toutiao.com/search?keyword=男生被噎住+同桌用海姆立克法施救)
+1. [老人在成都居家4个月燃气费1.5万](https://so.toutiao.com/search?keyword=老人在成都居家4个月燃气费1.5万)
+1. [提灯定损被注册为企业名](https://so.toutiao.com/search?keyword=提灯定损被注册为企业名)
 1. [女子感冒医院输错药身亡？官方回应](https://so.toutiao.com/search?keyword=女子感冒医院输错药身亡？官方回应)
-1. [人在海南 成都家中产生500立方用气量](https://so.toutiao.com/search?keyword=人在海南+成都家中产生500立方用气量)
+1. [居民爆料2名青少年持刀街头堵人](https://so.toutiao.com/search?keyword=居民爆料2名青少年持刀街头堵人)
+1. [伊朗总统在阅兵式上喊话以色列](https://so.toutiao.com/search?keyword=伊朗总统在阅兵式上喊话以色列)
+1. [9岁男孩校门口被同学家长殴打住院](https://so.toutiao.com/search?keyword=9岁男孩校门口被同学家长殴打住院)
+1. [中方支持巴勒斯坦正式加入联合国](https://so.toutiao.com/search?keyword=中方支持巴勒斯坦正式加入联合国)
+1. [以称将自己决定如何回应伊朗的袭击](https://so.toutiao.com/search?keyword=以称将自己决定如何回应伊朗的袭击)
+1. [“开封王婆”江西说媒首日促成多对](https://so.toutiao.com/search?keyword=“开封王婆”江西说媒首日促成多对)
+1. [社保专家谈调整养老金领取年龄](https://so.toutiao.com/search?keyword=社保专家谈调整养老金领取年龄)
+1. [伊朗无人机开灯袭击以色列是真的吗](https://so.toutiao.com/search?keyword=伊朗无人机开灯袭击以色列是真的吗)
+1. [二本女孩跨专业考研上岸双一流](https://so.toutiao.com/search?keyword=二本女孩跨专业考研上岸双一流)
+1. [南京熟食店闪爆致3人受伤](https://so.toutiao.com/search?keyword=南京熟食店闪爆致3人受伤)
+1. [女生打1块钱麻将输400块被气哭](https://so.toutiao.com/search?keyword=女生打1块钱麻将输400块被气哭)
+1. [中菲曾达成“秘密协定”？中方回应](https://so.toutiao.com/search?keyword=中菲曾达成“秘密协定”？中方回应)
+1. [广西玉林一工厂突发大火爆燃瞬间](https://so.toutiao.com/search?keyword=广西玉林一工厂突发大火爆燃瞬间)
+1. [王艺迪负张本美和止步世界杯16强](https://so.toutiao.com/search?keyword=王艺迪负张本美和止步世界杯16强)
+1. [钟南山发文悼念沈华浩](https://so.toutiao.com/search?keyword=钟南山发文悼念沈华浩)
+1. [金价大涨背后将是通胀时代吗](https://so.toutiao.com/search?keyword=金价大涨背后将是通胀时代吗)
+1. [以色列遭火箭弹袭击致多人伤亡](https://so.toutiao.com/search?keyword=以色列遭火箭弹袭击致多人伤亡)
+1. [男子酒后骚扰女孩还打家长](https://so.toutiao.com/search?keyword=男子酒后骚扰女孩还打家长)
+1. [掘金主帅：我们连续两年横扫湖人](https://so.toutiao.com/search?keyword=掘金主帅：我们连续两年横扫湖人)
+1. [专访武王墩墓出土文物幕后保护团队](https://so.toutiao.com/search?keyword=专访武王墩墓出土文物幕后保护团队)
 1. [成都重庆燃气集团股东涉同家公司](https://so.toutiao.com/search?keyword=成都重庆燃气集团股东涉同家公司)
+1. [美称将加强中东地区导弹防御和预警](https://so.toutiao.com/search?keyword=美称将加强中东地区导弹防御和预警)
+1. [新款问界M5预售12小时订单破万](https://so.toutiao.com/search?keyword=新款问界M5预售12小时订单破万)
+1. [公牛擒老鹰 将同热火争季后赛资格](https://so.toutiao.com/search?keyword=公牛擒老鹰+将同热火争季后赛资格)
+1. [中国2月持有美国国债减少227亿美元](https://so.toutiao.com/search?keyword=中国2月持有美国国债减少227亿美元)
+1. [人在海南 成都家中产生500立方用气量](https://so.toutiao.com/search?keyword=人在海南+成都家中产生500立方用气量)
 1. [父女同住一套房12年来不说话](https://so.toutiao.com/search?keyword=父女同住一套房12年来不说话)
 1. [郭德纲曝郭麒麟曾带女孩回家见家长](https://so.toutiao.com/search?keyword=郭德纲曝郭麒麟曾带女孩回家见家长)
-1. [专访武王墩墓出土文物幕后保护团队](https://so.toutiao.com/search?keyword=专访武王墩墓出土文物幕后保护团队)
-1. [居民爆料2名青少年持刀街头堵人](https://so.toutiao.com/search?keyword=居民爆料2名青少年持刀街头堵人)
-1. [掘金主帅：我们连续两年横扫湖人](https://so.toutiao.com/search?keyword=掘金主帅：我们连续两年横扫湖人)
 1. [以色列反击伊朗有四种报复手段](https://so.toutiao.com/search?keyword=以色列反击伊朗有四种报复手段)
 1. [伊朗军事能力有多强](https://so.toutiao.com/search?keyword=伊朗军事能力有多强)
-1. [暴雨袭击阿联酋 迪拜天空一秒变绿](https://so.toutiao.com/search?keyword=暴雨袭击阿联酋+迪拜天空一秒变绿)
-1. [光刻机巨头阿斯麦业绩爆雷](https://so.toutiao.com/search?keyword=光刻机巨头阿斯麦业绩爆雷)
 1. [以色列会空袭伊朗核设施吗](https://so.toutiao.com/search?keyword=以色列会空袭伊朗核设施吗)
 1. [开封王婆江西葛仙村现场说媒](https://so.toutiao.com/search?keyword=开封王婆江西葛仙村现场说媒)
 1. [ASML财报不佳引发半导体股集体下滑](https://so.toutiao.com/search?keyword=ASML财报不佳引发半导体股集体下滑)
 1. [投资两亿大桥围栏倒塌真是风太大吗](https://so.toutiao.com/search?keyword=投资两亿大桥围栏倒塌真是风太大吗)
 1. [科尔：克莱应该终身都为勇士效力](https://so.toutiao.com/search?keyword=科尔：克莱应该终身都为勇士效力)
-1. [流浪猫被捡回家 一来客人就趴肩膀](https://so.toutiao.com/search?keyword=流浪猫被捡回家+一来客人就趴肩膀)
 1. [欧弟说想卖跑车养女儿](https://so.toutiao.com/search?keyword=欧弟说想卖跑车养女儿)
-1. [南京熟食店闪爆致3人受伤](https://so.toutiao.com/search?keyword=南京熟食店闪爆致3人受伤)
 1. [男子抢夺旅客手机 警民合力擒获](https://so.toutiao.com/search?keyword=男子抢夺旅客手机+警民合力擒获)
 1. [《奔跑吧》大型过生日现场](https://so.toutiao.com/search?keyword=《奔跑吧》大型过生日现场)
 1. [阿联酋突遭75年来最大降雨](https://so.toutiao.com/search?keyword=阿联酋突遭75年来最大降雨)
@@ -61,7 +80,6 @@
 1. [波士顿动力推出电动人形机器人](https://so.toutiao.com/search?keyword=波士顿动力推出电动人形机器人)
 1. [美军在菲律宾部署中程导弹意欲何为](https://so.toutiao.com/search?keyword=美军在菲律宾部署中程导弹意欲何为)
 1. [菲律宾狐假虎威昏了头](https://so.toutiao.com/search?keyword=菲律宾狐假虎威昏了头)
-1. [金价大涨背后将是通胀时代吗](https://so.toutiao.com/search?keyword=金价大涨背后将是通胀时代吗)
 1. [暴雨前曾7次人工催雨？阿联酋否认](https://so.toutiao.com/search?keyword=暴雨前曾7次人工催雨？阿联酋否认)
 1. [南宁春节期间发生4死刑案 嫌犯被捕](https://so.toutiao.com/search?keyword=南宁春节期间发生4死刑案+嫌犯被捕)
 1. [美国为何又要对伊朗实施新制裁](https://so.toutiao.com/search?keyword=美国为何又要对伊朗实施新制裁)
@@ -93,7 +111,6 @@
 1. [华为Pura 70顶配售价过万](https://so.toutiao.com/search?keyword=华为Pura+70顶配售价过万)
 1. [大V：下铺让坐是人情不让是本分](https://so.toutiao.com/search?keyword=大V：下铺让坐是人情不让是本分)
 1. [3月份中国境内外金价溢价有所回落](https://so.toutiao.com/search?keyword=3月份中国境内外金价溢价有所回落)
-1. [驻日领馆提醒中国公民注意防范余震](https://so.toutiao.com/search?keyword=驻日领馆提醒中国公民注意防范余震)
 1. [27岁民警遭持刀袭击牺牲](https://so.toutiao.com/search?keyword=27岁民警遭持刀袭击牺牲)
 1. [渣土车侧翻压扁4辆汽车](https://so.toutiao.com/search?keyword=渣土车侧翻压扁4辆汽车)
 1. [专家：铺位使用权仅限于该购票乘客](https://so.toutiao.com/search?keyword=专家：铺位使用权仅限于该购票乘客)
